--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">My Money</string>
+
+    <!-- Movement List Screen -->
+    <string name="spending_per_month">Per month</string>
 </resources>
