--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,72 @@
 
     <!-- Transaction List Screen -->
     <string name="spending_per_month">Per month</string>
+    
+    <!-- Categories -->
+    <string name="category_savings">Savings</string>
+    <string name="category_other_transfers">Other transfers</string>
+    <string name="category_investments">Investments</string>
+    <string name="category_house">House</string>
+    <string name="category_house_garden">Garden</string>
+    <string name="category_house_furniture">Fitment &amp; furniture</string>
+    <string name="category_house_repairs">Renovation &amp; repairs</string>
+    <string name="category_house_other">House other</string>
+    <string name="category_living">Living</string>
+    <string name="category_living_internet">Internet &amp; TV</string>
+    <string name="category_living_services">Services</string>
+    <string name="category_living_utilities">Utilities</string>
+    <string name="category_living_mortgage">Mortgage &amp; loans</string>
+    <string name="category_living_rent">Rent</string>
+    <string name="category_living_surcharges">Surcharges</string>
+    <string name="category_living_other">Living other</string>
+    <string name="category_living_broadcaster">Broadcaster</string>
+    <string name="category_living_energy">Energy</string>
+    <string name="category_living_mobile">Mobile</string>
+    <string name="category_living_bank">Bank</string>
+    <string name="category_living_insurance">Insurance</string>
+    <string name="category_entertainment">Entertainment</string>
+    <string name="category_entertainment_holidays">Holidays &amp; accomodation</string>
+    <string name="category_entertainment_hobbies">Hobbies</string>
+    <string name="category_entertainment_sports">Sports</string>
+    <string name="category_entertainment_events">Events &amp; outings</string>
+    <string name="category_entertainment_other">Entertainment other</string>
+    <string name="category_entertainment_streaming">Streaming services</string>
+    <string name="category_food">Food &amp; drinks</string>
+    <string name="category_food_groceries">Groceries</string>
+    <string name="category_food_lunch">Lunch &amp; coffee</string>
+    <string name="category_food_restaurants">Restaurants</string>
+    <string name="category_food_alcohol">Alcohol &amp; tobacco</string>
+    <string name="category_food_bars">Bars &amp; clubs</string>
+    <string name="category_food_other">Food &amp; drinks other</string>
+    <string name="category_shopping">Shopping</string>
+    <string name="category_shopping_gifts">Gifts</string>
+    <string name="category_shopping_books">Books, newspaper &amp; magazines</string>
+    <string name="category_shopping_clothes">Clothes &amp; accessories</string>
+    <string name="category_shopping_hobbies">Hobbies &amp; sport</string>
+    <string name="category_shopping_electronics">Electronics</string>
+    <string name="category_shopping_other">Shopping other</string>
+    <string name="category_wellness">Wellness</string>
+    <string name="category_wellness_beauty">Beauty</string>
+    <string name="category_wellness_eyecare">Eyecare</string>
+    <string name="category_wellness_healthcare">Healthcare</string>
+    <string name="category_wellness_medicine">Medicine</string>
+    <string name="category_wellness_other">Wellness other</string>
+    <string name="category_transport">Transport</string>
+    <string name="category_transport_car">Car</string>
+    <string name="category_transport_public">Public transport</string>
+    <string name="category_transport_flights">Flights</string>
+    <string name="category_transport_other">Transport other</string>
+    <string name="category_other">Other</string>
+    <string name="category_other_withdrawals">Withdrawals</string>
+    <string name="category_other_business">Business expenses</string>
+    <string name="category_other_kids">Kids</string>
+    <string name="category_other_pets">Pets</string>
+    <string name="category_other_donations">Donations</string>
+    <string name="category_other_education">Education</string>
+    <string name="category_other_uncategorized">Uncategorized</string>
+    <string name="category_other_other">Other</string>
+    <string name="category_other_lottery">Lottery</string>
+    <string name="category_other_political">Political</string>
+    <string name="category_other_software">Software</string>
+    <string name="category_other_payment">Payment request</string>
 </resources>
